# atomic-bundler

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PRD.md  README.md  TESTING.md  clippy.toml  config.example.yaml  config.hoodi.yaml  config.mainnet.yaml  config.yaml  env.example  rust-toolchain.toml  rustfmt.toml
.cursor/rules/: rust.mdc
.github/workflows/: ci.yml  release.yml
crates/config/: Cargo.toml
crates/config/src/: lib.rs  loader.rs  schema.rs  validation.rs
crates/middleware/: Cargo.toml
crates/middleware/src/: app.rs  database.rs  main.rs  scheduler.rs  storage.rs
crates/middleware/src/api/: handlers.rs  middleware.rs  mod.rs  routes.rs  server.rs
crates/payment/: Cargo.toml
crates/payment/src/: calculator.rs  forger.rs  lib.rs  policies.rs
crates/relay_client/: Cargo.toml
crates/relay_client/src/: client.rs  health.rs  lib.rs  manager.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: engine.rs  lib.rs  traits.rs  validation.rs
crates/types/: Cargo.toml
crates/types/src/: bundle.rs  error.rs  lib.rs  payment.rs  relay.rs  utils.rs
scripts/: .gitignore  create_bundle_two_txs.py  create_mainnet_titan_bundle.py  create_test_tx.py  mainnet_titan_bundle_docs.md  pyproject.toml  test_bundle_request.json
