[package]
name = "relay_client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "relay_client"
path = "src/lib.rs"

[dependencies]
# Workspace crates
types = { path = "../types" }

# External dependencies
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
alloy.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
