[package]
name = "simulator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "simulator"
path = "src/lib.rs"

[dependencies]
# Workspace crates
types = { path = "../types" }

# External dependencies
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
alloy.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio-test = { workspace = true }
