[package]
name = "types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "types"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
alloy.workspace = true
thiserror.workspace = true

[dev-dependencies]
